tests/baselines/reference/symbolDeclarationEmit1.errors.txt
symbolDeclarationEmit1.ts(2,5): error TS2564: Property '[Symbol.toPrimitive]' has no initializer and is not definitely assigned in the constructor.


==== symbolDeclarationEmit1.ts (1 errors) ====
    class C {
        [Symbol.toPrimitive]: number;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2564: Property '[Symbol.toPrimitive]' has no initializer and is not definitely assigned in the constructor.
    }